src/test/ui/feature-gates/feature-gate-destructuring_assignment.rs
fn main() {
    let (a, b) = (0, 1);
    (a, b) = (2, 3); //~ ERROR destructuring assignments are unstable
}
